<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Přibližný čas</string>
    <string name="action_settings">Nastavení</string>
    <string name="sometimes">někdy</string>
    <string name="loading_time">Zjišťuji čas…</string>
    <string name="morning">ráno</string>
    <string name="night">noc</string>
    <string name="beforenoon">dopoledne</string>
    <string name="lunchtime">kolem oběda</string>
    <string name="afternoon">odpoledne</string>
    <string name="evening">večer</string>
    <string name="midnight">půlnoc</string>
    <string name="hours_one">jedna</string>
    <string name="hours_two">dvě</string>
    <string name="hours_three">tři</string>
    <string name="hours_four">čtyři</string>
    <string name="hours_five">pět</string>
    <string name="hours_six">šest</string>
    <string name="hours_seven">sedm</string>
    <string name="hours_eight">osm</string>
    <string name="hours_nine">devět</string>
    <string name="hours_ten">deset</string>
    <string name="hours_eleven">jedenáct</string>
    <string name="hours_noon">dvanáct</string>
    <string name="full_and_a_little">celá a něco</string>
    <string name="close_to_quarter_past">za chvíli čtvrt</string>
    <string name="quarter_past">čtvrt</string>
    <string name="after_quarter_past">po čtvrt</string>
    <string name="almost_half">bude půl</string>
    <string name="half">půl</string>
    <string name="after_half">po půl</string>
    <string name="almost_quarter_to">hnedle tři čtvrtě</string>
    <string name="quarter_to">tři čtvrtě</string>
    <string name="after_quarter_to">po tři čtvrtě</string>
    <string name="almost_full">bude celá</string>
    <string name="full">celá</string>
    <string name="add_widget">Přidat widget</string>
    <string name="january">leden</string>
    <string name="february">únor</string>
    <string name="march">březen</string>
    <string name="april">duben</string>
    <string name="may">květen</string>
    <string name="june">červen</string>
    <string name="july">červenec</string>
    <string name="august">srpen</string>
    <string name="september">září</string>
    <string name="october">říjen</string>
    <string name="november">listopad</string>
    <string name="december">prosinec</string>
    <string name="undecember">taky prosinec</string>
    <string name="monday">pondělí</string>
    <string name="tuesday">úterý</string>
    <string name="wednesday">středa</string>
    <string name="thursday">čtvrtek</string>
    <string name="friday">pátek</string>
    <string name="saturday">sobota</string>
    <string name="sunday">neděle</string>
    <string name="preference_font_family">Písmo</string>
    <string name="preference_done_title">Uložit</string>
    <string name="preference_done_summary">Přibližné nastavení je kompletní</string>
    <string name="preference_font_summary">Font widgetu</string>
    <string name="preference_font_title">Font</string>
    <string name="preference_done_category_title">Hotovo</string>
    <string name="preference_font_color_title">Barva</string>
    <string name="preference_font_color_summary">Barva textu ve widgetu</string>
    <string name="dialog_pick_color_ok">OK</string>
    <string name="dialog_pick_color_cancel">Zrušit</string>
    <string name="btn_desc_less_precise">, chci to méně přesně</string>
    <string name="btn_desc_more_precise">, chci to přesněji</string>
    <string name="half_to_twelve">dvanácté</string>
    <string name="half_to_one">jedné</string>
    <string name="half_to_two">druhé</string>
    <string name="half_to_three">třetí</string>
    <string name="half_to_four">čtvrté</string>
    <string name="half_to_five">páté</string>
    <string name="half_to_six">šesté</string>
    <string name="half_to_seven">sedmé</string>
    <string name="half_to_eight">osmé</string>
    <string name="half_to_nine">deváté</string>
    <string name="half_to_ten">desáté</string>
    <string name="half_to_eleven">jedenácté</string>
    <string name="double_widget_name">Přibližně dvakrát čas</string>
    <plurals name="it_was_">
        <item quantity="one">byla</item>
        <item quantity="two">byly</item>
        <item quantity="few">byly</item>
        <item quantity="other">bylo</item>
    </plurals>
    <string name="quarter_">čtvrt</string>
    <string name="to__">na\u00A0</string>
    <string name="half_to">půl</string>
    <string name="three_quarters_">tři čtvrtě</string>
    <plurals name="soon_hour_">
        <item quantity="one">bude</item>
        <item quantity="two">budou</item>
        <item quantity="few">budou</item>
        <item quantity="other">bude</item>
    </plurals>

    <!--<string name="app_name">Approximate time</string>-->
    <!--<string name="action_settings">Settings</string>-->
    <!--<string name="sometimes">sometimes</string>-->
    <!--<string name="loading_time">Fetching time...</string>-->
    <!--<string name="morning">morning</string>-->
    <!--<string name="night">night</string>-->
    <!--<string name="beforenoon">morning</string>-->
    <!--<string name="lunchtime">lunchtime</string>-->
    <!--<string name="afternoon">afternoon</string>-->
    <!--<string name="midnight">midnight</string>-->
    <!--<string name="hours_one">one</string>-->
    <!--<string name="hours_two">two</string>-->
    <!--<string name="hours_three">three</string>-->
    <!--<string name="hours_four">four</string>-->
    <!--<string name="hours_five">five</string>-->
    <!--<string name="hours_six">six</string>-->
    <!--<string name="hours_seven">seven</string>-->
    <!--<string name="hours_eight">eight</string>-->
    <!--<string name="hours_nine">nine</string>-->
    <!--<string name="hours_ten">ten</string>-->
    <!--<string name="hours_eleven">eleven</string>-->
    <!--<string name="hours_noon">noon</string>-->
    <!--<string name="full_and_a_little">past o\'clock</string>-->
    <!--<string name="close_to_quarter_past">almost quarter past</string>-->
    <!--<string name="quarter_past">quarter past</string>-->
    <!--<string name="after_quarter_past">past quarter past</string>-->
    <!--<string name="almost_half">almost half</string>-->
    <!--<string name="half">half</string>-->
    <!--<string name="after_half">past half</string>-->
    <!--<string name="almost_quarter_to">almost quarter to</string>-->
    <!--<string name="quarter_to">quarter to</string>-->
    <!--<string name="after_quarter_to">past quarter to</string>-->
    <!--<string name="almost_full">almost o\'clock</string>-->
    <!--<string name="full">o\'clock</string>-->
    <!--<string name="appwidget_text">EXAMPLE</string>-->
    <!--<string name="add_widget">Add widget</string>-->

</resources>
